turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:14: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
	val a = rule(state,p,0)
                    ^Turmite:15: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
	val b = rule(state,p,1)
                    ^Turmite:16: error: too many arguments for method apply: (i: Int)Array[Array[Int]] in class Array
	val c = rule(state,p,2)
                    ^